--- a/public/less/components/custom.less
+++ b/public/less/components/custom.less
@@ -1,6 +1,63 @@
 
 .wrapper {
+	// .input-small {
+	// 	height: 20px !important;
+	// 	width: 30px !important;
+	// }
+
 	.shortdescription {
 		font-size: 10px;
+	}
+}
+
+@color_1: white;
+@background_color_1: white;
+@background_color_2: #337ab7;
+@border_color_1: #ddd;
+
+input[type="checkbox"][id^="cb"] {
+	display: none;
+}
+label {
+	border: 1px solid #fff;
+	padding: 10px;
+	display: block;
+	position: relative;
+	margin: 10px;
+	cursor: pointer;
+
+	&:before {
+		background-color: @background_color_1;
+		color: @color_1;
+		content: " ";
+		display: block;
+		z-index: 1;
+		border-radius: 50%;
+		position: absolute;
+		top: -5px;
+		left: -5px;
+		width: 25px;
+		height: 25px;
+		text-align: center;
+		line-height: 28px;
+		transition-duration: 0.4s;
+		transform: scale(0);
+	}
+	img {
+		transition-duration: 0.2s;
+		transform-origin: 50% 50%;
+	}
+}
+&:checked {
+	&+label {
+		&:before {
+			content: "✓";
+			background-color: @background_color_2;
+			transform: scale(1);
+		}
+		img {
+			transform: scale(0.9);
+			z-index: -1;
+		}
 	}
 }
