--- a/web/css/main.css
+++ b/web/css/main.css
@@ -8765,6 +8765,47 @@ button.close {
 .wrapper .shortdescription {
   font-size: 10px;
 }
+input[type="checkbox"][id^="cb"] {
+  display: none;
+}
+label {
+  border: 1px solid #fff;
+  padding: 10px;
+  display: block;
+  position: relative;
+  margin: 10px;
+  cursor: pointer;
+}
+label:before {
+  background-color: white;
+  color: white;
+  content: " ";
+  display: block;
+  z-index: 1;
+  border-radius: 50%;
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  line-height: 28px;
+  transition-duration: 0.4s;
+  transform: scale(0);
+}
+label img {
+  transition-duration: 0.2s;
+  transform-origin: 50% 50%;
+}
+:checked + label:before {
+  content: "✓";
+  background-color: #337ab7;
+  transform: scale(1);
+}
+:checked + label img {
+  transform: scale(0.9);
+  z-index: -1;
+}
 .block-relative {
   display: block;
   position: relative;
