Working post to database

--- a/public/less/components/custom.less
+++ b/public/less/components/custom.less
@@ -5,6 +5,11 @@
 	// 	width: 30px !important;
 	// }
 
+	.lead {
+		font-size: 18px;
+		text-align: center;
+	}
+
 	.shortdescription {
 		font-size: 10px;
 	}
