--- a/web/css/main.css
+++ b/web/css/main.css
@@ -8844,8 +8844,13 @@ label img {
   transition-duration: 0.2s;
   transform-origin: 50% 50%;
 }
+:not(:checked) + label:before {
+  content: "\2713";
+  background-color: lightgrey;
+  transform: scale(1);
+}
 :checked + label:before {
-  content: "✓";
+  content: "\2713";
   background-color: #337ab7;
   transform: scale(1);
 }
